Vertices are moving in different directions #63384

Closed
opened 2019-04-08 08:14:04 +02:00 by Alexey · 7 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GT 610/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 54), branch: blender2.7, commit date: 2019-04-07 15:02, hash: 75f551faca

Short description of error
Vertices are moving in different directions when you move them

Exact steps for others to reproduce the error
Video: https://youtu.be/AcCee29gdr8

  • Add Cube
  • Add modifier Mirror
  • Add Armature
  • Parent Cube to Armature
  • Add Subdivision Surface Modifier
  • Subdivide Cube in Edit Mode
  • Activate option «Display modifier in Edit Mode» for all modifiers
  • Activate option «Adjust edit cage to modifier result» for Subdivision Surface Modifier.
  • Move Vertices in Edit mode.
    Vertices dancing.blend
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GT 610/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 54), branch: blender2.7, commit date: 2019-04-07 15:02, hash: `75f551faca` **Short description of error** Vertices are moving in different directions when you move them **Exact steps for others to reproduce the error** Video: https://youtu.be/AcCee29gdr8 - Add Cube - Add modifier Mirror - Add Armature - Parent Cube to Armature - Add Subdivision Surface Modifier - Subdivide Cube in Edit Mode - Activate option «Display modifier in Edit Mode» for all modifiers - Activate option «Adjust edit cage to modifier result» for Subdivision Surface Modifier. - Move Vertices in Edit mode. [Vertices dancing.blend](https://archive.blender.org/developer/F6918380/Vertices_dancing.blend)
Author

Added subscriber: @tombambadil

Added subscriber: @tombambadil
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.
(relies on "Activate option «Adjust edit cage to modifier result» for Subdivision Surface Modifier.", otherwise everything seems to be fine...)

Also getting an assert in this case:
BLI_assert failed: /blender/source/blender/blenkernel/intern/DerivedMesh.c:1957, editbmesh_build_data(), at 'em->ob->id.tag & LIB_TAG_COPIED_ON_WRITE'

checking...

Can confirm. (relies on "Activate option «Adjust edit cage to modifier result» for Subdivision Surface Modifier.", otherwise everything seems to be fine...) Also getting an assert in this case: `BLI_assert failed: /blender/source/blender/blenkernel/intern/DerivedMesh.c:1957, editbmesh_build_data(), at 'em->ob->id.tag & LIB_TAG_COPIED_ON_WRITE'` checking...
Sergey Sharybin was assigned by Philipp Oeser 2019-04-08 12:16:16 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

@Sergey: one for you?

@Sergey: one for you?

This issue was referenced by 328f7e1365

This issue was referenced by 328f7e13653b7521fed5b92a630d9d9e7be2ce2a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63384
No description provided.