Fix T63384: Vertices are moving in different directions